force-app/main/default/objects/Airport_Operation_Checklist__mdt/Airport_Operation_Checklist__mdt.object-meta.xml
<CustomObject>
    <description>Stores all the parameters for the mandatory checklist records for each airport operation record</description>
    <label>Airport Operation Checklist</label>
    <pluralLabel>Airport Operation Checklists</pluralLabel>
</CustomObject>