force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/ActualEndBase__c.field-meta.xml
<CustomField>
    <fullName>ActualEndBase__c</fullName>
    <description>Describes the date time field to be used from the parent record to use for the actual complete base time calculation</description>
    <label>Actual End Base</label>
    <length>20</length>
    <type>Text</type>
</CustomField>