force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/ActualEndOffset__c.field-meta.xml
<CustomField>
    <fullName>ActualEndOffset__c</fullName>
    <description>Describes the time duration offset for the actual complete time for the checklist record</description>
    <label>Actual End Offset</label>
    <length>20</length>
    <type>Text</type>
</CustomField>