force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/ActualStartBase__c.field-meta.xml
<CustomField>
    <fullName>ActualStartBase__c</fullName>
    <description>Describes the date time field to be used from the parent record to use for the actual start base time calculation</description>
    <label>Actual Start Base</label>
    <length>20</length>
    <type>Text</type>
</CustomField>