force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/ActualStartOffset__c.field-meta.xml
<CustomField>
    <fullName>ActualStartOffset__c</fullName>
    <description>Describes the time duration offset for the actual start time for the checklist record</description>
    <label>Actual Start Offset</label>
    <length>20</length>
    <type>Text</type>
</CustomField>