force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/EstimatedEndBase__c.field-meta.xml
<CustomField>
    <fullName>EstimatedEndBase__c</fullName>
    <description>Describes the date time field to be used from the parent record to use for the estimated complete base time calculation</description>
    <label>Estimated End Base</label>
    <length>20</length>
    <type>Text</type>
</CustomField>