force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/EstimatedEndOffset__c.field-meta.xml
<CustomField>
    <fullName>EstimatedEndOffset__c</fullName>
    <description>Describes the time duration offset for the estimated complete time for the checklist record</description>
    <label>Estimated End Offset</label>
    <length>20</length>
    <type>Text</type>
</CustomField>