force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/EstimatedStartBase__c.field-meta.xml
<CustomField>
    <fullName>EstimatedStartBase__c</fullName>
    <description>Describe the estimated start date time field to be used from the Airport Operation record</description>
    <label>Estimated Start Base</label>
    <length>20</length>
    <type>Text</type>
</CustomField>