force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/EstimatedStartOffset__c.field-meta.xml
<CustomField>
    <fullName>EstimatedStartOffset__c</fullName>
    <description>Describes the time duration offset for the estimated start time of the checklist record</description>
    <label>Estimated Start Offset</label>
    <length>20</length>
    <type>Text</type>
</CustomField>