force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/GroupInCharge__c.field-meta.xml
<CustomField>
    <fullName>GroupInCharge__c</fullName>
    <description>Describes the group which is in charge of the checklist record</description>
    <label>Group In Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROS</fullName>
                <default>true</default>
                <label>ROS</label>
            </value>
            <value>
                <fullName>CIQ</fullName>
            </value>
            <value>
                <fullName>LCS</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>CCS</fullName>
            </value>
            <value>
                <fullName>Acars</fullName>
            </value>
            <value>
                <fullName>LNF</fullName>
            </value>
            <value>
                <fullName>GHD</fullName>
            </value>
            <value>
                <fullName>OPS+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>