force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/ListOrder__c.field-meta.xml
<CustomField>
    <fullName>ListOrder__c</fullName>
    <description>Describes the sequence order of the checklist record</description>
    <label>List Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>