force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/ScheduleType__c.field-meta.xml
<CustomField>
    <fullName>ScheduleType__c</fullName>
    <description>Describes whether the flight operation is &apos;Arrival&apos; or &apos;Departure&apos;</description>
    <label>Schedule Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>