force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Describes whether the checklist record belongs to &apos;Above Wing&apos; or &apos;Below Wing&apos;</description>
    <label>Site</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>