force-app/main/default/objects/Airport_Operation_Checklist__mdt/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <description>Describes the stage name of the checklist record</description>
    <label>Stage Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>